--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsdom": "^9.4.1",
     "mocha": "^3.0.0",
     "react-addons-test-utils": "^15.3.0",
+    "redux-mock-store": "^1.1.2",
     "sinon": "^1.17.5",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
