--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
     "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
+    "css-loader": "^0.23.1",
     "dotenv": "^2.0.0",
     "enzyme": "^2.4.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "ignore-styles": "^4.0.0",
     "jsdom": "^9.4.1",
     "mocha": "^3.0.0",
     "react-addons-test-utils": "^15.3.0",
     "redux-mock-store": "^1.1.2",
     "sinon": "^1.17.5",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
     "start": "webpack-dev-server --content-base public --history-api-fallback",
-    "test": "mocha --require jsdom-setup.js --compilers js:babel-core/register --recursive"
+    "test": "mocha --require jsdom-setup.js --compilers js:babel-core/register,./import-styles-setup --recursive"
   },
   "dependencies": {
     "jquery": "^3.1.0",
