--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "node": ">=4.4.7"
   },
   "devDependencies": {
-    "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.4",
+    "babel-core": "6.13.2",
+    "babel-loader": "6.2.5",
     "babel-plugin-transform-es2015-classes": "^6.9.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
     "babel-preset-react": "^6.11.1",
@@ -16,12 +16,13 @@
     "enzyme": "^2.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "ignore-styles": "^4.0.0",
-    "jsdom": "^9.4.1",
-    "mocha": "^3.0.0",
+    "jsdom": "9.4.2",
+    "mocha": "3.0.2",
+    "next-update": "^1.4.2",
     "react-addons-test-utils": "^15.3.0",
     "redux-mock-store": "^1.1.2",
     "sinon": "^1.17.5",
-    "webpack": "^1.13.1",
+    "webpack": "1.13.2",
     "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
